``` feat(scripts): 引入统一网格搜索脚本并优化实验管理
新增 `grid_search_unified.py` 脚本，支持串行执行所有实验，自动适配单卡/多卡训练。
优化参数组合生成逻辑，支持分组式配置和模型-batch_size智能配对。
改进实验结果管理机制，实时写入CSV和JSON文件，并支持详情记录与最佳结果追踪。

refactor(config): 调整UCF-101视频分类网格搜索配置结构

更新 `ucf101_video_grid.yaml` 配置文件，明确网格搜索控制参数通过命令行传递，
并细化模型组的超参数搜索范围。同时修正部分默认值如 clip_len、epochs 和 device_ids。

fix(scripts): 简化实验结果复制逻辑并提升错误处理鲁棒性

移除冗余代码，简化 `grid_search.py` 中的文件复制操作；
增强异常捕获信息展示，提高调试效率和运行稳定性。
```

--- a/config/ucf101_video_grid copy.yaml
+++ b/config/ucf101_video_grid copy.yaml
@@ -61,17 +61,14 @@ models_to_train:
   # - "swin3d_s"
   # - "swin3d_t"
 
-# ============================================================================
-# 网格搜索配置（唯一的网格搜索空间定义）
-# ============================================================================
-# 说明：
-# 1. 网格搜索空间：通过 grid_search.groups 定义，每组模型有自己的超参数搜索范围
-# 2. 网格搜索控制参数（如 max_experiments, save_results 等）通过命令行传递：
-#    python scripts/grid_search_unified.py --config config/ucf101_video_grid.yaml \
-#           --max_experiments 100 --save_results --top_n 10
-# 3. 固定参数（可选）：可通过 grid_search.fixed 定义在所有组合中保持不变的参数
-# ============================================================================
+# 网格搜索设置
+max_experiments: 100
+continue_on_error: true
+parallel_jobs: 1
+save_results: true
+# results_file: "video_grid_search_results.csv"  # 注释掉以使用时间戳文件名
 
+# 网格搜索超参数 - 分组式配置
 grid_search:
   # 分组式搜索：每组模型有自己的超参数搜索范围
   groups:
