--- a/config/ucf101_video.yaml
+++ b/config/ucf101_video.yaml
@@ -17,29 +17,30 @@ swanlab:
 
 # 数据集配置
 data:
-  type: ucf101_video  # 使用新的视频帧数据集类型
-  root: data/ucf101   # 数据集根目录
+  type: ucf101_video   # 使用新的视频帧数据集类型
+  root: data/ucf101    # 数据集根目录
   num_workers: 16      # 数据加载工作进程数
   params:
-    clip_len: 16      # 每个视频片段的帧数
+    clip_len: 16       # 每个视频片段的帧数
 
 # 模型配置
 model:
-  type: r3d_18        # 使用3D ResNet-18模型
+  type: r3d_18       # 使用3D ResNet-18模型
+  # type: mc3_18
   params:
-    num_classes: 101  # UCF-101有101个动作类别
+    num_classes: 101   # UCF-101有101个动作类别
 
 # 超参数配置
 hp:
-  batch_size: 64      # 批大小
+  batch_size: 64       # 批大小
   learning_rate: 0.001 # 学习率
-  epochs: 20          # 训练轮数
+  epochs: 20           # 训练轮数
 
 # 优化器配置
 optimizer:
-  name: adam          # 使用Adam优化器
+  name: adamw           # 使用Adam优化器
   params:
-    weight_decay: 0.0001 # 权重衰减
+    weight_decay: 0.001 # 权重衰减
 
 # 学习率调度器配置
 scheduler:
