refactor(config): 移除不再使用的配置文件和脚本
- 删除 `grid.yaml` 和 `ucf101_video_grid copy.yaml` 配置文件，清理无效代码
- 更新 `ucf101_video_grid.yaml` 和 `ucf101_video.yaml` 中的数据集路径，确保一致性
- 调整 `ucf101_video.yaml` 中的工作进程数和批大小，优化训练配置
- 移除 `analyze_video_metrics.py` 和 `grid_search_unified.py` 脚本，简化项目结构
- 更新 `grid_search.py` 和 `monitor_training.py` 脚本，提升代码可读性和维护性

--- a/config/ucf101_video_grid.yaml
+++ b/config/ucf101_video_grid.yaml
@@ -20,7 +20,7 @@ swanlab:
 # 数据配置
 data:
   type: ucf101_video  # 使用新的视频帧数据集类型
-  root: data/ucf101   # 数据集根目录
+  root: /home/swq/posec3d/data/ucf101  # 数据集根目录
   num_workers: 16      # 数据加载工作进程数
   params:
     clip_len: 16      # 每个视频片段的帧数
