--- a/config/ucf101_video_grid.yaml
+++ b/config/ucf101_video_grid.yaml
@@ -36,7 +36,9 @@ data:
 
 # 超参数配置（基础默认值，可被网格搜索和命令行覆盖）
 hp:
-  epochs: 10
+  epochs: 1
+  batch_size: 32  # 默认值，网格搜索时会被覆盖
+  learning_rate: 0.0001  # 默认值，网格搜索时会被覆盖
 
 # GPU配置
 gpu:
@@ -51,11 +53,11 @@ multi_gpu:
 # 模型选择配置
 models_to_train:
   # 启用要训练的模型列表，注释掉不需要训练的模型
-  - "r3d_18"
-  - "mc3_18"
+  # - "r3d_18"
+  # - "mc3_18"
   # - "r2plus1d_18"
   # - "s3d"
-  # - "mvit_v1_b"
+  - "mvit_v1_b"
   # - "mvit_v2_s"
   # - "swin3d_b"
   # - "swin3d_s"
@@ -79,50 +81,46 @@ grid_search:
     light_3d_cnn:
       model.type: ["r3d_18", "mc3_18", "r2plus1d_18"]
       hp.batch_size: [64, 32, 32]  # 统一batch_size，会自动扩充为 [128, 128, 128]
-      hp.learning_rate: [0.001]
+      hp.learning_rate: [0.0001]  # 与ucf101_video.yaml一致
       optimizer.name: ["adamw"]
       optimizer.params.weight_decay: [0.01]
-      scheduler.name: ["warmup_cosine"]
-      scheduler.params.warmup_epochs: [1]  # Warmup期长度：1-2个epoch
-      scheduler.params.warmup_start_factor: [0.1]  # Warmup起始学习率比例
-      scheduler.params.eta_min_factor: [0.01]  # 最小学习率为初始学习率的1%
+      scheduler.name: ["cosine"]  # 统一使用cosine调度器
+      scheduler.params.T_max: [10]  # 与epochs一致
+      scheduler.params.eta_min: [0.000001]
       loss.name: ["crossentropy"]
     
     # 复杂3D CNN模型组 - 单模型，多batch_size选择
     complex_3d_cnn:
       model.type: ["s3d"]
-      hp.batch_size: [128]  # S3D需要小batch_size
-      hp.learning_rate: [0.001]  # 测试不同学习率
+      hp.batch_size: [36]  # S3D模型较大，需要小batch_size
+      hp.learning_rate: [0.0001]  # 与ucf101_video.yaml一致
       optimizer.name: ["adamw"]  # S3D用Adam即可
-      optimizer.params.weight_decay: [0.01]  # 适中的权重衰减
-      scheduler.name: ["warmup_cosine", "cosine"]  # 首选Warmup + Cosine，次选纯Cosine
-      scheduler.params.warmup_epochs: [1]  # Warmup期长度：1-2个epoch
-      scheduler.params.warmup_start_factor: [0.1]  # Warmup起始学习率比例
-      scheduler.params.eta_min_factor: [0.01]  # 最小学习率为初始学习率的1%
+      optimizer.params.weight_decay: [0.01]  # 与ucf101_video.yaml一致
+      scheduler.name: ["cosine"]  # 统一使用cosine调度器
+      scheduler.params.T_max: [10]  # 与epochs一致
+      scheduler.params.eta_min: [0.000001]
       loss.name: ["crossentropy"]
     
-    # Transformer模型组 - 精确配对batch_size，使用Warmup + Cosine调度策略
+    # Transformer模型组 - 精确配对batch_size，统一使用cosine调度器
     transformer_models:
       model.type: ["mvit_v1_b", "mvit_v2_s"]
-      hp.batch_size: [36, 32]  # 按顺序配对：mvit_v1_b用36，mvit_v2_s用32
-      hp.learning_rate: [0.001]  # 降低学习率，更稳定
+      hp.batch_size: [16, 12]  # 按顺序配对：mvit_v1_b用36，mvit_v2_s用32
+      hp.learning_rate: [0.0001]  # 与ucf101_video.yaml一致
       optimizer.name: ["adamw"]  # Transformer首选AdamW
-      optimizer.params.weight_decay: [0.05]  # 适中的权重衰减
-      scheduler.name: ["warmup_cosine"]  # 首选Warmup + Cosine，次选纯Cosine
-      scheduler.params.warmup_epochs: [1]  # Warmup期长度：1-2个epoch
-      scheduler.params.warmup_start_factor: [0.1]  # Warmup起始学习率比例
-      scheduler.params.eta_min_factor: [0.01]  # 最小学习率为初始学习率的1%
+      optimizer.params.weight_decay: [0.01]  # 与ucf101_video.yaml一致
+      scheduler.name: ["cosine"]  # 统一使用cosine调度器
+      scheduler.params.T_max: [10]  # 与epochs一致
+      scheduler.params.eta_min: [0.000001]
       loss.name: ["crossentropy"]
     
-    # Swin3D模型组 - 精确配对batch_size，使用Warmup + Cosine调度策略
+    # Swin3D模型组 - 精确配对batch_size，统一使用cosine调度器
     swin3d_models:
       model.type: ["swin3d_b", "swin3d_s", "swin3d_t"]
-      hp.batch_size: [16, 16, 16]  # 按顺序配对：swin3d_b用4，swin3d_s用8，swin3d_t用16
-      hp.learning_rate: [0.001]  # 保守的学习率
+      hp.batch_size: [8, 8, 8]  # 按顺序配对：swin3d_b用4，swin3d_s用8，swin3d_t用16
+      hp.learning_rate: [0.0001]  # 与ucf101_video.yaml一致
       optimizer.name: ["adamw"]  # Swin系列推荐AdamW
-      optimizer.params.weight_decay: [0.05]  # Swin系列用更大的weight_decay
-      scheduler.name: ["warmup_cosine"]  # 首选Warmup + Cosine，次选纯Cosine
-      scheduler.params.warmup_epochs: [1]  # Warmup期长度：1-2个epoch
-      scheduler.params.warmup_start_factor: [0.1]  # Warmup起始学习率比例：10%-20%
-      scheduler.params.eta_min_factor: [0.005]  # 最小学习率比例：1%-0.5%
+      optimizer.params.weight_decay: [0.01]  # 与ucf101_video.yaml一致
+      scheduler.name: ["cosine"]  # 统一使用cosine调度器
+      scheduler.params.T_max: [10]  # 与epochs一致
+      scheduler.params.eta_min: [0.000001]
       loss.name: ["crossentropy"]
